// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appeal decision should render "Appeal decision" Page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Appeal decision</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Decision</dt>
            <dd class="govuk-summary-list__value">Dismissed</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Decision issued date</dt>
            <dd class="govuk-summary-list__value">25 December 2023</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision letter</dt>
            <dd class="govuk-summary-list__value"><a class="govuk-link" href="/documents/1/download/e1e90a49-fab3-44b8-a21a-bb73af089f6b/decision-letter.pdf"
                target="_blank">decision-letter.pdf</a>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/update-decision-letter/upload-decision-letter?backUrl=/appeals-service/appeal-details/1/appeal-decision">Change<span class="govuk-visually-hidden"> decision letter</span></a>
            </dd>
        </div>
    </dl>
</main>"
`;

exports[`Appeal decision should render "Appeal decision" with content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Appeal decision</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Decision</dt>
            <dd class="govuk-summary-list__value">Dismissed</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Decision issued date</dt>
            <dd class="govuk-summary-list__value">12 June 2022 (reissued on 25 December 2023)</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision letter</dt>
            <dd class="govuk-summary-list__value"><a class="govuk-link" href="/documents/1/download/e1e90a49-fab3-44b8-a21a-bb73af089f6b/decision-letter.pdf"
                target="_blank">decision-letter.pdf</a>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/update-decision-letter/upload-decision-letter?backUrl=/appeals-service/appeal-details/1/appeal-decision">Change<span class="govuk-visually-hidden"> decision letter</span></a>
            </dd>
        </div>
    </dl>
</main>"
`;
